# docs/api/api.yaml
@@ -99,6 +99,29 @@ paths:
       tags:
         - Site
   /v1/sites:
+    get:
+      operationId: search
+      summary: Search sites
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 20
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchSiteResponse'
+      tags:
+        - Site
     post:
       operationId: create
       summary: Create a new Site
@@ -123,6 +146,26 @@ paths:
         - Site
 components:
   schemas:
+    SearchSiteResponse:
+      type: object
+      properties:
+        sites:
+          type: array
+          items:
+            $ref: '#/components/schemas/SiteSummary'
+    SiteSummary:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          type: string
+          example: ZeSite
+        displayName:
+          type: string
+          example: ZeSite
     GetSiteResponse:
       type: object
       properties:
