# src/main/kotlin/com/wutsi/site/dto/SearchSiteResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.site.dto
+
+import kotlin.collections.List
+
+public data class SearchSiteResponse(
+    public val sites: List<SiteSummary> = emptyList()
+)
