# src/main/kotlin/com/wutsi/site/dto/SiteSummary.kt
@@ -1,0 +1,10 @@
+package com.wutsi.site.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class SiteSummary(
+    public val id: Long = 0,
+    public val name: String = "",
+    public val displayName: String = ""
+)
